--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
         <activity android:name=".MapViewActivity" />
         <activity android:name=".SignUpActivity" />
+        <activity android:name=".ExploreActivity" />
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
