--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".MapViewActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".ExploreActivity" />
+        <activity android:name=".PostActivity" />
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
