--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.ar:core:1.14.0'
+    implementation 'de.javagl:obj:0.2.1'
 }
